Changelog:

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.1 | Tested on CB 1.4.5-R0.3
 ! Compatible with 1.4.5-R0.3
 ! Now uses TapAPI v1.8
 = Fix with EntityDeathEvents
 + Added time formatting. Time left is now displayed in hours/mins/secs
 + Added Assassin chat channel, Assassins can talk with each other. Neutral players will see messages scrambled.
 - Removed status message when joining the game


Version 1.0 | Tested on CB 1.4.5-R0.2
 + Added masks. Assassins get a mask which they can't take off
 + Added warning messages when a nearby player puts on his mask
 + Added data saving. Logging in/out will not change your status
 + Added Metrics
 + Added PVP handling, Neutral players can't attack each other
 + Added chat and death-message functionality, Assassins' names will be hidden
 + Added location saving. Assassins will get teleported to the location where they put on their mask.
 + Added command to check if you're an Assassin and for how long
 + Added command to spawn mask(s)
 + Added command to refresh cooldown time
 + Added command to deactivate assassin mode
 + Added download dependency. Assassin automatically downloads TagAPI if not found.