@@ -9,12 +9,17 @@ import me.TfT02.Assassin.Listeners.PlayerListener;
 import me.TfT02.Assassin.Listeners.TagListener;
 import me.TfT02.Assassin.runnables.ActiveTimer;
 import me.TfT02.Assassin.runnables.AssassinRangeTimer;
+import me.TfT02.Assassin.util.CustomShapedRecipe;
 import me.TfT02.Assassin.util.Data;
 import me.TfT02.Assassin.util.DependencyDownload;
 import me.TfT02.Assassin.util.Metrics;
+import me.TfT02.Assassin.util.NamedItemStack;
 import net.milkbowl.vault.economy.Economy;
 
+import org.bukkit.ChatColor;
+import org.bukkit.Material;
 import org.bukkit.configuration.file.FileConfiguration;
+import org.bukkit.inventory.ItemStack;
 import org.bukkit.plugin.PluginManager;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.scheduler.BukkitScheduler;
@@ -58,6 +63,7 @@ public class Assassin extends JavaPlugin {
 			debug_mode = true;
 		}
 		setupConfiguration();
+		addCustomRecipes();
 		//Register events
 		pm.registerEvents(tagListener, this);
 		pm.registerEvents(entityListener, this);
@@ -100,6 +106,12 @@ public class Assassin extends JavaPlugin {
 		scheduler.scheduleSyncRepeatingTask(this, new ActiveTimer(this), 0, 40);
 	}
 
+	private void addCustomRecipes() {
+		ItemStack assassinMask = new NamedItemStack(new ItemStack(Material.WOOL, 1, (short) 0, (byte) 15)).setName(ChatColor.DARK_RED + "Assassin Mask").setLore(ChatColor.GRAY + "Allows PVP", "Hold in your hand and right-click", "to activate assassin mode.").getItemStack();
+		ItemStack blackWool = new ItemStack(Material.WOOL, 1, (short) 0, (byte) 15);
+		CustomShapedRecipe.addRecipe("Assassin Mask", assassinMask, new Object[]{"XXX", "X X", 'X', blackWool});
+	}
+
 	private void setupConfiguration() {
 		FileConfiguration config = this.getConfig();
 		config.addDefault("General.debug_mode_enabled", false);
@@ -110,6 +122,7 @@ public class Assassin extends JavaPlugin {
 		config.addDefault("Assassin.warn_others_on_activation", true);
 		config.addDefault("Assassin.warn_others_when_near", true);
 		config.addDefault("Assassin.return_mask", false);
+		config.addDefault("Assassin.prevent_neutral_pvp", true);
 
 //		config.addDefault("Assassin.max_allowed", 5);
 //		config.addDefault("Assassin.activation_cost", 100);
