@@ -209,6 +209,7 @@ public class Metrics {
 	 * 
 	 * @return True if statistics measuring is running, otherwise false.
 	 */
+	@SuppressWarnings("deprecation")
 	public boolean start() {
 		synchronized (optOutLock) {
 			// Did we opt out?
