@@ -12,6 +12,9 @@ Version 1.1 | Tested on CB 1.4.5-R0.3
  = Fix with EntityDeathEvents
  + Added time formatting. Time left is now displayed in hours/mins/secs
  + Added Assassin chat channel, Assassins can talk with each other. Neutral players will see messages scrambled.
+ + Added prevent players from dropping Masks on the ground
+ + Added custom recipe for crafting masks
+ + Added config option to allow neutral pvp (pvp between non assassins)
  - Removed status message when joining the game
 
 
